After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 797225 - audioconvert: Conversion between non-interleaved and interleaved audio aways results in mono (regression)
audioconvert: Conversion between non-interleaved and interleaved audio aways ...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other All
: Normal blocker
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-09-29 08:55 UTC by Matej Knopp
Modified: 2018-10-05 12:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (1015 bytes, patch)
2018-09-29 08:55 UTC, Matej Knopp
none Details | Review

Description Matej Knopp 2018-09-29 08:55:42 UTC
Created attachment 373807 [details] [review]
Patch

Problem happens during fixating caps. The caps are not properly fixated because "layout" is not removed from the structure and thus intersection always results in empty caps, and thus falling back to first structure of othercaps (which in my case has 1 channel).

After removing "layout" from the structure caps are fixated properly and everything works like before.
Comment 1 George Kiagiadakis 2018-10-02 08:50:45 UTC
Sounds reasonable
Comment 2 George Kiagiadakis 2018-10-02 09:14:53 UTC
Can you please give me some more information about the caps on both sides of your use case, so that I can write a unit test?
Comment 3 George Kiagiadakis 2018-10-05 12:41:32 UTC
commit a85a59e4a8cda731e688f4e6716401e394c6c29c
Author: George Kiagiadakis <george.kiagiadakis@collabora.com>
Date:   Fri Oct 5 15:37:45 2018 +0300

    tests: audioconvert: test caps fixate with layout conversion
    
    https://bugzilla.gnome.org/show_bug.cgi?id=797225

commit 18f082a0d8db9626f233b142d8615a6929cf5224
Author: Matej Knopp <matej.knopp@gmail.com>
Date:   Sat Sep 29 10:39:46 2018 +0200

    audioconvert: remove layout from structure when fixating caps
    
    otherwise caps intersection always fails when converting non-interleaved to interleaved audio
    
    https://bugzilla.gnome.org/show_bug.cgi?id=797225